--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,10 +12,16 @@ spring:
     host: 119.3.181.96
     port: 6379
     password: guptcommunity
+  jackson:
+    time-zone: GMT+8
+    date-format: yyy-MM-dd HH:mm:ss
+    default-property-inclusion: non_null
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: net.gupt.community.entity
+  configuration:
+    map-underscore-to-camel-case: true
 
 pagehelper:
   helper-dialect: mysql
