更新代码规范

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -41,5 +41,4 @@ logging:
     net:
       gupt:
         community:
-          mapper:
-            RecommendMapper: debug
+          mapper: debug
