--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>net.gupt.community.GuptCommunityApplication</mainClass>
+                    <executable>true</executable>
                 </configuration>
             </plugin>
             <plugin>
