1、更改readme的json错误 2、去除SpringBoot的ssl配置，采用nginx配置 3、更改端口为8081 4、更改redis服务端地址

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>net.gupt</groupId>
     <artifactId>GuptCommunityServer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <name>GuptCommunityServer</name>
     <description>广东邮电职业技术学院邮院社区小程序项目后端</description>
@@ -33,6 +34,34 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- 添加jsp支持-->
+        <!--<dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            &lt;!&ndash;<scope>provided</scope>&ndash;&gt;
+            &lt;!&ndash; 如果不注释，你会发现main线程运行报404错误，必须使用 spring-boot:run这个命令运行才行。所以我们注释掉&ndash;&gt;
+        </dependency>&ndash;&gt;-->
+
+        <!--<dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -111,7 +140,7 @@
     </dependencies>
 
     <build>
-        <finalName>GuptCommunity</finalName>
+        <finalName>community</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -129,6 +158,10 @@
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
