添加删除七牛的图片接口

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,12 @@
             <artifactId>qiniu-java-sdk</artifactId>
             <version>[7.2.0, 7.2.99]</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.2</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- Log4j -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
