--- a/src/main/resources/prop/qiniu.properties
+++ b/src/main/resources/prop/qiniu.properties
@@ -1,4 +1,4 @@
 # ∆ﬂ≈£≈‰÷√Œƒº˛
-qiniu.accessKey=0gFZ9x9oU6jixj1_mO0-0JZ8GfFTmg_TjU1L4-Tr
-qiniu.secretKey=SIg_dFRa_3_lqVgGNENN8I1ABs9l3BF49yja7XFq
-qiniu.bucket=guptcommunityphotostorage
+qiniu.accessKey=Rg8xh7O9ZoVYhWeptNTLmjOxfWMKw4S_V0rCprja
+qiniu.secretKey=guwHDOlp0j3S8-rCRbpur6xU7NyB08Ej1CwOmNgJ
+qiniu.bucket=gupt-img
