--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
             <version>1.1.3</version>
         </dependency>
 
+        <!--引入websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
         <!--单元测试-->
         <dependency>
             <groupId>junit</groupId>
