--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
             <version>1.1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.12.1</version>
+        </dependency>
+
         <!--引入websocket-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
